--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,6 @@
 browser:chrome
 google.url:https://www.google.com
 env:https:beta.docuport.app
+loop.practice:https://loopcamp.vercel.app/
+dynamicLoading.username:tomsmith
+dynamicLoading.incorrectPassword:incorrect
